--- a/front/src/css/pages/admin.css
+++ b/front/src/css/pages/admin.css
@@ -43,12 +43,15 @@
     flex-direction: column;
     width: 100%;
     padding-top: 4rem;
+    gap: 12rem;
+
 }
 
 .godDiv {
     width: 100%;
     display: flex;
     justify-content: center;
+    padding-bottom: 10rem;
 }
 
 .accordionContainer.open {
