--- a/front/src/css/components/header/header.css
+++ b/front/src/css/components/header/header.css
@@ -1,4 +1,3 @@
-/* Estilos globales */
 html,
 *::before,
 *::after {
@@ -7,41 +6,40 @@ html,
     box-sizing: border-box;
 }
 
-/* Animaciones globales */
 @keyframes slideInVertical {
     from {
-        transform: translateY(-100%); /* Desliza desde arriba */
+        transform: translateY(-100%);
     }
     to {
-        transform: translateY(0); /* Llega a su posición final */
+        transform: translateY(0);
     }
 }
 
 @keyframes slideOutVertical {
     from {
-        transform: translateY(0); /* Empieza desde su posición final */
+        transform: translateY(0);
     }
     to {
-        transform: translateY(-100%); /* Se desliza hacia arriba y se oculta */
+        transform: translateY(-100%);
     }
 }
 
 @keyframes slideInHorizontal {
     from {
-        transform: translateX(150%); /* Llega a su posición final */
+        transform: translateX(150%);
     }
     to {
-        transform: translateX(50%); /* Desliza desde la izquierda */
+        transform: translateX(50%);
         
     }
 }
 
 @keyframes slideOutHorizontal {
     from {
-        transform: translateX(0); /* Empieza desde su posición final */
+        transform: translateX(0);
     }
     to {
-        transform: translateX(-100%); /* Se desliza hacia la izquierda y se oculta */
+        transform: translateX(-100%);
     }
 }
 
@@ -54,22 +52,20 @@ html,
     }
 }
 
-/* Reutilización de la animación de deslizamiento vertical */
 .slideInVertical {
     animation: slideInVertical 0.3s ease forwards;
 }
 
 .zoomContainer {
-    transition: transform 0.3s ease; /* Suaviza la animación de zoom */
-    overflow: hidden; /* Evita el desbordamiento si el contenido crece */
-    position: relative; /* Para un mejor posicionamiento si se requiere */
+    transition: transform 0.3s ease;
+    overflow: hidden;
+    position: relative;
 }
 
-/* Estilos adicionales para la imagen o video */
 .zoomContainer img {
-    width: 100%; /* Asegúrate de que la imagen ocupe el contenedor */
-    height: auto; /* Mantiene la proporción de la imagen */
-    display: block; /* Quita el espacio inferior */
+    width: 100%;
+    height: auto;
+    display: block; 
 }
 
 
@@ -77,7 +73,6 @@ html,
     animation: slideOutVertical 0.3s ease forwards;
 }
 
-/* Reutilización de la animación de deslizamiento horizontal */
 .slideInHorizontal {
     animation: slideInHorizontal 0.3s ease forwards;
 }
@@ -86,31 +81,26 @@ html,
     animation: slideOutHorizontal 0.3s ease forwards;
 }
 
-/* Contenedor principal del header */
-/* Estilo para el Header */
-/* Contenedor principal del header */
 .headerContainer {
     width: 100%;
-    background-color: white; /* Fondo siempre blanco */
+    background-color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed; /* Cambiado a relative para flujo natural */
+    position: fixed;
     top: 0;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
-    color: black; /* Texto siempre negro */
-    
+    color: black;
     border-bottom: 1px solid #dcdcdc;
     z-index: 11;
     
 }
 
-/* Elimina estilos de hover para mantener colores constantes */
 .headerContainer .logo,
 .headerContainer .material-symbols-outlined,
 .headerContainer .buttonText,
 .headerContainer .button {
-    color: black; /* Asegúrate de que los textos e íconos sean negros */
+    color: black;
 }
 
 .headerContainer .material-symbols-outlined,
@@ -118,8 +108,6 @@ html,
     font-size: 24px;
 }
 
-
-/* Alineación de los elementos del header */
 .headerLeft,
 .headerRight {
     display: flex;
@@ -131,31 +119,26 @@ html,
     padding-right: 3rem;
 }
 
-
-
 .headerCentral {
     display: flex;
     justify-content: center;
     flex-grow: 1;
 }
 
-/* Logo */
 .logo {
     font-size: 16px;
-    color: white; /* Color del logo en estado normal */
+    color: white;
     padding-left: 3rem;
 }
 
-/* Iconos y textos alineados */
 .material-symbols-outlined,
 .buttonText {
     font-size: 16px;
-    color: white; /* Color de iconos y textos en estado normal */
+    color: white;
     display: flex;
     align-items: center;
 }
 
-/* Botones generales */
 .button {
     background: none;
     border: none;
@@ -165,7 +148,6 @@ html,
     gap: 0.5rem;
 }
 
-/* NUEVOS ESTILOS PARA ANIMACIONES Y ELEMENTOS */
 .sideMenu,
 .favouriteContainer,
 .filterMenu,
@@ -198,9 +180,6 @@ header {
     cursor: pointer;
 }
 
-
-
-
 .flexButton_FilterColumn {
     display: flex;
     flex-direction: column;
@@ -223,7 +202,6 @@ header {
     
 }
 
-/* Estilos para el botón de filtro */
 .headerFilter {
     display: flex;
     width: 97%;
@@ -236,3 +214,17 @@ header {
     font-size: 16px;
 }
 
+.headerNews_Container {
+    height: 15px;
+    z-index: 12;
+    display: flex;
+   width: 100%;
+    background-color: rebeccapurple;
+}
+
+
+.containerNews_sections {
+    display: flex;
+   width: 100%;
+
+}
