--- a/front/src/css/components/checkout/checkout_component.css
+++ b/front/src/css/components/checkout/checkout_component.css
@@ -3,7 +3,7 @@
     position: fixed;
     right: 0;
     top: 0;
-    width: 50%;
+    width: 40%;
     height: 100%;
     background-color: white; /* Fondo blanco grisáceo */
     color: #333; /* Texto en tono gris oscuro */
@@ -31,6 +31,28 @@
     to {
         transform: translateX(100%);
     }
+}
+
+.mainContainer_renderContent {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 2rem;
+}
+
+.closeButton {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.containerButton_renderContent {
+    padding-top: 1.5rem;
+    width: 80%;
+    display: flex;
+    justify-content: flex-end;
 }
 
 /* Aplicación de animaciones */
