--- a/front/src/css/components/footer/footer.css
+++ b/front/src/css/components/footer/footer.css
@@ -5,7 +5,7 @@ footer {
 }
 
 footer.footer-light {
-    background-color: #f9f9f9; /* Color claro */
+    background-color: white; /* Color claro */
     color: #333;
 }
 
