--- a/front/src/css/components/header/search.css
+++ b/front/src/css/components/header/search.css
@@ -26,7 +26,10 @@
     animation: slideOutVertical 0.3s ease forwards;
 }
 
-
+.groupButtons_Header {
+    display: flex;
+    padding-left: 1rem;
+}
 
 /* Estilos para el componente HeaderSearch */
 .searchContainer {
@@ -295,7 +298,6 @@
    font-size: 16px;
     right: 0;
     border: none;
-    padding-right: 2rem;
     cursor: pointer;
     background: transparent;
 }
