--- a/front/src/css/pages/emailsignin.css
+++ b/front/src/css/pages/emailsignin.css
@@ -17,8 +17,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 3rem;
     width: 100%;
+    justify-content: center;
     gap: 20px; /* Espacio entre el formulario y el botón */
 }
 
