--- a/front/src/css/pages/second_step_sign_in.css
+++ b/front/src/css/pages/second_step_sign_in.css
@@ -1,5 +1,5 @@
 .profile-section  {
-  background-color: #D9D9D9;
+  background-color: #D9D9D9
 }
 
 .header h2 {
@@ -21,7 +21,7 @@
   width: 100%;
   margin: 0 auto;
   display: flex;
-  background-color: #D9D9D9;
+  background-color: #ebe9e9;
 
 }
 
@@ -136,6 +136,12 @@
 .submit-button2:hover {
   background-color: #D9D9D9;
   color: black;
+}
+
+.containerModal_accordion {
+  display: flex;
+  flex-direction: row;
+
 }
 
 /* Estilos para el AccordionContainer */
