--- a/front/src/css/components/footer/footer.css
+++ b/front/src/css/components/footer/footer.css
@@ -174,6 +174,10 @@ footer.footer-dark .socialLinks a {
     padding: 1rem;
 }
 
+.footerLogo {
+    height: 4vh;
+}
+
 .footerBottomRow {
     display: flex;
     align-items: center;
